[package]
name = "RustRealtime"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Actix actor และ WebSocket stack ---
actix             = "0.13"                           # แกน actor framework  :contentReference[oaicite:0]{index=0}
actix-web         = { version = "4", features = [
                       "macros",    # เปิดแมโคร #[get] ฯลฯ
                       "compress"   # gzip / br / zstd
                     ] }
actix-web-actors  = "4"                              # ตัวช่วย WebSocket (แม้จะถูก deprecate)  :contentReference[oaicite:1]{index=1}

# --- ฐานข้อมูล SQLite + connection-pool ---
rusqlite          = { version = "0.31", features = ["bundled"] }   # รวม libsqlite3 มาในไบนารี  :contentReference[oaicite:2]{index=2}
r2d2              = "0.8"                            # generic connection pool
r2d2-sqlite       = "0.25"                           # อะแดปเตอร์ r2d2 ↔ SQLite  :contentReference[oaicite:3]{index=3}

# --- Serialization / utility ---
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
base64            = "0.21"
derive_more       = "0.99"